feat: modernize global intercom for roadmap plan 02